adding new text

--- a/html/p1/w1.html
+++ b/html/p1/w1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P. I</title>
+    <title>PI_w1</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -58,17 +58,16 @@
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    This photograph represents the disorder, anger and frustration that I feel provided by all the
+                    changes are happening in my,
+                    academic and social life. Maybe those feelings are consequences for the pandemic situation that all
+                    the world are experimenting on.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    Maybe I just need some time to roder my ideas and feelings to be in a better shape... Talking
+                    mentally...
+                    <br><br>
+                    I need to find myself to improve my life and i think making new friends and meeting new people are
+                    good ways to do that. I this subject is an excellent occasion for doing that.
                 </p>
             </div>
         </div>
@@ -87,21 +86,20 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Weekly Video Summary
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione illum, dolorum officia omnis
+                    repellendus rerum, alias facere id neque corporis ullam debitis quos animi nobis, aliquam dolores
+                    deserunt autem nemo nulla porro enim odio fuga! Sed quis, voluptas optio repellendus quisquam ea
+                    temporibus recusandae vel nesciunt, natus deserunt corporis, aut illum quibusdam laborum sapiente
+                    ducimus accusantium. Odit, libero omnis! Quisquam repellendus fugiat officia adipisci omnis harum
+                    mollitia tenetur? Eius, accusamus?
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat esse, mollitia saepe nesciunt,
+                    accusamus repudiandae atque fugiat sint sit magni vitae voluptate quo debitis cupiditate? Quia
+                    placeat numquam suscipit harum.
                 </p>
             </div>
         </div>
