--- a/html/p1/w2.html
+++ b/html/p1/w2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P. I</title>
+    <title>PI_w2</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -47,27 +47,33 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w2_udla.jpeg" alt="My head disorder">
+                    <img src="/img/artdev/progress1/w2_summary.jpg" alt="videoSS">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Weekly Video Summary
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    Well for me was something quite important to learn about artistic appreciation, especially the first
+                    two steps that are observe and percieve. Was very important since it is something essential in
+                    people's lives
+                    to be able to
+                    appreciate things differently, especially art.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    Sometimes we do not notice where you can see art or how
+                    it manifests but it
+                    is important to recognize it even in those places, situations or things in which we do not think
+                    that some type of
+                    artistic expression could be present on a day-to-day basis.
+                    Like this foto. Some people may think is art and other people not.
+                    <br><br>
+                    I think that as people and professionals is
+                    essential.
+                    <br><br>
+
                 </p>
             </div>
         </div>
@@ -80,27 +86,37 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w2_hearPhones.jpg" alt="Me">
+                    <img src="/img/artdev/progress1/w2_hearPhones.jpg" alt="HearPhones">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Weekly Video Questions
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    Think about what moments in the last week you created a connection with some artistic expression.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    I signed up for the Photography Club.
+                    <br><br>
+                    Was
+                    What was it that triggered or started that connection?
+                    <br><br>
+                    Well, I had always liked how cameras work in social and scientific ways. Also love how a camera can
+                    capture reality with a totalyy different
+                    approach. So I decided to
+                    enter the club
+                    <br><br>
+                    What does that moment say about who you are as a person?
+                    <br><br>
+                    I think it represented my desire to learn about everything, especially art.
+                    How might that moment influence decisions about the near future ... let's say next week?
+                    <br><br>
+                    Well it fills my free time (which is no longer free haha), I have to take a lot of
+                    photos and that
+                    excites me
+                    <br><br>
                 </p>
             </div>
         </div>
