--- a/html/p1/w3.html
+++ b/html/p1/w3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P. I</title>
+    <title>PI_w3</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -53,21 +53,20 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Weekly Video Summary
                 </h2>
                 <p>
+                    The videos tell us about various art situations both internationally and internally here in Ecuador,
+                    they give us a
+                    vision of what can be done with art and how it can break different barriers such as borders,
+                    stereotypes, prejudices and
+                    even physical limitations.
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
-                    <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    It was interesting to see how people can achieve so many things
+                    through art and the way
+                    they express themselves through it. The videos, in addition to the above mentioned, try to show us
+                    how much can be done
+                    in art, in so many different forms of it.
                 </p>
             </div>
         </div>
@@ -86,21 +85,22 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Weekly Video Questions
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    What was the video that most caught your attention and why?
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    For me, the video that was the most interesting was the part number 4, why it makes us see
+                    that art
+                    It is a form of
+                    universal communication, regardless of religion, social status or different ethnicities of the
+                    towns that make art in
+                    In this sense, I find the work done by the group mentioned in the video very valuable. I
+                    excites me even more since
+                    have managed to use technological tools to make the impossible come true.
+                    <br><br>
+                    <b>Tech RULES!!!</b>
                 </p>
             </div>
         </div>
