--- a/html/p1/w4.html
+++ b/html/p1/w4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P. I</title>
+    <title>PI_w4</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -53,7 +53,7 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Weekly Video Summary
                 </h2>
                 <p>
                     <br><br>
@@ -64,10 +64,6 @@
                     coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
                     merge art and
                     programming so im working on it. Also i love math, AI , music and videogames (make and play them).
-                    <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
                 </p>
             </div>
         </div>
@@ -86,7 +82,7 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Weekly Video Questions
                 </h2>
                 <p>
                     <br><br>
@@ -97,10 +93,6 @@
                     coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
                     merge art and
                     programming so im working on it. Also i love math, AI , music and videogames (make and play them).
-                    <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
                 </p>
             </div>
         </div>
@@ -109,6 +101,13 @@
 
     <!-- act 3 -->
     <section class="bio" id="bio">
+        <div class="bio__title">
+            <h2 class="title">
+                "La persistencia de la memoria"
+                -Salvador Dali-
+            </h2>
+
+        </div>
         <div class="bio__content">
 
             <div class="col left-col">
@@ -119,21 +118,28 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Oral Presentation
                 </h2>
                 <p>
+                    Observe: You can see melted clocks, a sea without waves, ants, a plate, a mountain, the sky, a tree
+                    on a specide of
+                    rectangular elevation and a kind of blanket.
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    Perceive: the perceptions obtained are: L of a rough, bitter, gloomy work, mystery, fear, unknown
+                    environment, anguish,
+                    loneliness.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    Question: Why the melted clocks, what makes a blanket there, what the ants represent, why a sea
+                    without waves, why the
+                    tree is cut down?
+                    <br><br>
+                    Reflect: Melting clocks represent the time that passes differently. These clocks have different
+                    markings, as their
+                    pointers are melted and suggest a distorted notion of time.
+                    <br><br>
+                    Know: Salvador Dalí did not like ants very much and he used to use them as a symbol of putrefaction
+                    in his works. In the
+                    background a landscape that corresponds to some coastal cliffs of Catalonia
                 </p>
             </div>
         </div>
