made the prject html file for future uploads

--- a/html/p1/w5.html
+++ b/html/p1/w5.html
@@ -137,7 +137,7 @@
                     the north of Quito,
                     Ecuador with my family.
                 </p>
-                <a href="/html/project1.html" class="btn">Watch The Project</a>
+                <a href="/html/p1/project1.html" class="btn">Watch The Project</a>
             </div>
         </div>
     </section>
