--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </p>
         </div>
         <div class="content">
-            <a class="card" href="/docs/progress1.html" target="_blank">
+            <a class="card" href="/progress1.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -147,7 +147,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/docs/progress2.html" target="_blank">
+            <a class="card" href="/progress2.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -163,7 +163,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/docs/progress3.html" target="_blank">
+            <a class="card" href="/progress3.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
