--- a/progress2.html
+++ b/progress2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P.I</title>
+    <title>P.II</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -26,15 +26,15 @@
     <!-- navbar -->
     <header id="navbar">
         <a href="/index.html" class="navbar__logo">WMYM</a>
-        <div class="ham-menu" id="ham-menu">
-            <span class="material-icons" id="ham-icon">
-                menu
+        <div class="ham-menu" id="ham-medocs
+            <span class=" material-icons" id="ham-icon">
+            menu
             </span>
         </div>
         <div class="navbar__links">
             <a href="/index.html">Home</a>
-            <a href="/docs/progress1.html">P.II</a>
-            <a href="/docs/progress1.html">P.III</a>
+            <a href="/progress1.html">P.I</a>
+            <a href="/progress3.html">P.III</a>
         </div>
     </header>
 
@@ -42,30 +42,30 @@
     <!-- galery -->
     <div class="galery-row">
         <div class="column">
-            <a href="/docs/p1/w1.html" class="pics"><img src="/img/artdev/progress1/w1_disorder.jpg" alt=""></a>
-            <a href="/docs/p1/w1.html" class="pics"><img src="/img/artdev/progress1/w1_video.jpg" alt=""></a>
+            <a href="/w1.html" class="pics"><img src="/img/artdev/progress1/w1_disorder.jpg" alt=""></a>
+            <a href="/w1.html" class="pics"><img src="/img/artdev/progress1/w1_video.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/docs/p1/w2.html" class="pics"><img src="/img/artdev/progress1/w2_udla.jpeg" alt=""></a>
-            <a href="/docs/p1/w2.html" class="pics"><img src="/img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
+            <a href="/w2.html" class="pics"><img src="/img/artdev/progress1/w2_udla.jpeg" alt=""></a>
+            <a href="/w2.html" class="pics"><img src="/img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/docs/p1/w3.html" class="pics"><img src="/img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
-            <a href="/docs/p1/w3.html" class="pics"><img src="/img/artdev/progress1/w3_question.jpg" alt=""></a>
+            <a href="/w3.html" class="pics"><img src="/img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
+            <a href="/w3.html" class="pics"><img src="/img/artdev/progress1/w3_question.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/docs/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_video.jpg" alt=""></a>
-            <a href="/docs/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_questions.jpg" alt=""></a>
-            <a href="/docs/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
+            <a href="/w4.html" class="pics"><img src="/img/artdev/progress1/w4_video.jpg" alt=""></a>
+            <a href="/w4.html" class="pics"><img src="/img/artdev/progress1/w4_questions.jpg" alt=""></a>
+            <a href="/w4.html" class="pics"><img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/docs/p1/w5.html" class="pics"><img src="/img/artdev/progress1/w5_summary.jpg" alt=""></a>
-            <a href="/docs/p1/w5.html" class="pics"><img src="/img/artdev/progress1/w5_soundImg.jpg" alt=""></a>
-            <a href="/docs/p1/w5.html" class="pics"><img src="/img/artdev/progress1/w5_project.jpg" alt=""></a>
+            <a href="/w5.html" class="pics"><img src="/img/artdev/progress1/w5_summary.jpg" alt=""></a>
+            <a href="/w5.html" class="pics"><img src="/img/artdev/progress1/w5_soundImg.jpg" alt=""></a>
+            <a href="/w5.html" class="pics"><img src="/img/artdev/progress1/w5_project.jpg" alt=""></a>
         </div>
     </div>
 
