--- a/w4.html
+++ b/w4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PI_w5</title>
+    <title>PI_w4</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="/index.html">Home</a>
-            <a href="/docs/progress1.html">P.I</a>
+            <a href="/progress1.html">P.I</a>
         </div>
     </header>
 
@@ -41,14 +41,13 @@
     <!-- act1 -->
     <section class="bio" id="bio">
         <div class="bio__title">
-            <h2 class="title">Week 5</h2>
+            <h2 class="title">Week 4</h2>
         </div>
-
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w5_summary.jpg" alt="My head disorder">
+                    <img src="/img/artdev/progress1/w4_video.jpg" alt="My head disorder">
                 </div>
             </div>
 
@@ -58,18 +57,13 @@
                 </h2>
                 <p>
                     <br><br>
-                    The videos tell us about various art situations both internationally and internally here in Ecuador,
-                    they give us a
-                    vision of what can be done with art and how it can break different barriers such as borders,
-                    stereotypes, prejudices and
-                    even physical limitations.
-                    <br><br>
-                    It was interesting to see how people can achieve so many things
-                    through art and the way
-                    they express themselves through it. The videos, in addition to the above mentioned, try to show us
-                    how much can be done
-                    in art, in so many different forms of it.
-                    <br><br>
+                    My name is Washington Yandun, am a software engineering student. I always love tech and science
+                    thats why decided to study something related to that.
+                    Another fact of me is that i enjoy art, specially if it is made
+                    with a bit of tech o
+                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
+                    merge art and
+                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
                 </p>
             </div>
         </div>
@@ -82,13 +76,13 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w5_soundImg.jpg" alt="Me">
+                    <img src="/img/artdev/progress1/w4_questions.jpg" alt="Me">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Weekly Video Questions
                 </h2>
                 <p>
                     <br><br>
@@ -99,10 +93,6 @@
                     coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
                     merge art and
                     programming so im working on it. Also i love math, AI , music and videogames (make and play them).
-                    <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
                 </p>
             </div>
         </div>
@@ -111,33 +101,46 @@
 
     <!-- act 3 -->
     <section class="bio" id="bio">
+        <div class="bio__title">
+            <h2 class="title">
+                "La persistencia de la memoria"
+                -Salvador Dali-
+            </h2>
+
+        </div>
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w5_project.jpg" alt="My head disorder">
+                    <img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt="Me">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Oral Presentation
                 </h2>
                 <p>
+                    Observe: You can see melted clocks, a sea without waves, ants, a plate, a mountain, the sky, a tree
+                    on a specide of
+                    rectangular elevation and a kind of blanket.
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    Perceive: the perceptions obtained are: L of a rough, bitter, gloomy work, mystery, fear, unknown
+                    environment, anguish,
+                    loneliness.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    Question: Why the melted clocks, what makes a blanket there, what the ants represent, why a sea
+                    without waves, why the
+                    tree is cut down?
+                    <br><br>
+                    Reflect: Melting clocks represent the time that passes differently. These clocks have different
+                    markings, as their
+                    pointers are melted and suggest a distorted notion of time.
+                    <br><br>
+                    Know: Salvador Dalí did not like ants very much and he used to use them as a symbol of putrefaction
+                    in his works. In the
+                    background a landscape that corresponds to some coastal cliffs of Catalonia
                 </p>
-                <a href="/html/p1/project1.html" class="btn">Watch The Project</a>
             </div>
         </div>
     </section>
