upload index file

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </p>
         </div>
         <div class="content">
-            <a class="card" href="/progress1.html" target="_blank">
+            <a class="card" href="progress1.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
