upload index file

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/progress2.html" target="_blank">
+            <a class="card" href="progress2.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
