--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/progress3.html" target="_blank">
+            <a class="card" href="progress3.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
