--- a/progress1.html
+++ b/progress1.html
@@ -9,7 +9,7 @@
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- google fonts api -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
