--- a/progress1.html
+++ b/progress1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P.I</title>
     <!-- script file -->
-    <script src="/js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <!-- style file -->
     <link rel="stylesheet" href="css/style.css">
     <!-- google fonts api -->
@@ -17,24 +17,24 @@
     <!-- google icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- favicon  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
 </head>
 
 <body>
     <!-- navbar -->
     <header id="navbar">
-        <a href="/index.html" class="navbar__logo">WMYM</a>
+        <a href="index.html" class="navbar__logo">WMYM</a>
         <div class="ham-menu" id="ham-menu">
             <span class="material-icons" id="ham-icon">
                 menu
             </span>
         </div>
         <div class="navbar__links">
-            <a href="/index.html">Home</a>
-            <a href="/progress1.html">P.II</a>
-            <a href="/progress1.html">P.III</a>
+            <a href="index.html">Home</a>
+            <a href="progress2.html">P.II</a>
+            <a href="progress3.html">P.III</a>
         </div>
     </header>
 
@@ -42,30 +42,30 @@
     <!-- galery -->
     <div class="galery-row">
         <div class="column">
-            <a href="/w1.html" class="pics"><img src="/img/artdev/progress1/w1_disorder.jpg" alt=""></a>
-            <a href="/w1.html" class="pics"><img src="/img/artdev/progress1/w1_video.jpg" alt=""></a>
+            <a href="w1.html" class="pics"><img src="img/artdev/progress1/w1_disorder.jpg" alt=""></a>
+            <a href="w1.html" class="pics"><img src="img/artdev/progress1/w1_video.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/w2.html" class="pics"><img src="/img/artdev/progress1/w2_udla.jpeg" alt=""></a>
-            <a href="/w2.html" class="pics"><img src="/img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
+            <a href="w2.html" class="pics"><img src="img/artdev/progress1/w2_udla.jpeg" alt=""></a>
+            <a href="w2.html" class="pics"><img src="img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/w3.html" class="pics"><img src="/img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
-            <a href="/w3.html" class="pics"><img src="/img/artdev/progress1/w3_question.jpg" alt=""></a>
+            <a href="w3.html" class="pics"><img src="img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
+            <a href="w3.html" class="pics"><img src="img/artdev/progress1/w3_question.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/w4.html" class="pics"><img src="/img/artdev/progress1/w4_video.jpg" alt=""></a>
-            <a href="/w4.html" class="pics"><img src="/img/artdev/progress1/w4_questions.jpg" alt=""></a>
-            <a href="/w4.html" class="pics"><img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
+            <a href="w4.html" class="pics"><img src="img/artdev/progress1/w4_video.jpg" alt=""></a>
+            <a href="w4.html" class="pics"><img src="img/artdev/progress1/w4_questions.jpg" alt=""></a>
+            <a href="w4.html" class="pics"><img src="img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="/w5.html" class="pics"><img src="/img/artdev/progress1/w5_summary.jpg" alt=""></a>
-            <a href="/w5.html" class="pics"><img src="/img/artdev/progress1/w5_soundImg.jpg" alt=""></a>
-            <a href="/w5.html" class="pics"><img src="/img/artdev/progress1/w5_project.jpg" alt=""></a>
+            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_summary.jpg" alt=""></a>
+            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_soundImg.jpg" alt=""></a>
+            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_project.jpg" alt=""></a>
         </div>
     </div>
 
