--- a/progress1.html
+++ b/progress1.html
@@ -63,9 +63,9 @@
         </div>
 
         <div class="column">
-            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_summary.jpg" alt=""></a>
-            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_soundImg.jpg" alt=""></a>
-            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_project.jpg" alt=""></a>
+            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_summary.jpg" alt="summary"></a>
+            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_soundImg.jpg" alt="soundImg"></a>
+            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_project.jpg" alt="project"></a>
         </div>
     </div>
 
