--- a/w1.html
+++ b/w1.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PI_w1</title>
     <!-- script file -->
-    <script src="/js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <!-- style file -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- google fonts api -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,23 +17,23 @@
     <!-- google icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- favicon  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
 </head>
 
 <body>
     <!-- navbar -->
     <header id="navbar">
-        <a href="/index.html" class="navbar__logo">WMYM</a>
+        <a href="index.html" class="navbar__logo">WMYM</a>
         <div class="ham-menu" id="ham-menu">
             <span class="material-icons" id="ham-icon">
                 menu
             </span>
         </div>
         <div class="navbar__links">
-            <a href="/index.html">Home</a>
-            <a href="/progress1.html">P.I</a>
+            <a href="index.html">Home</a>
+            <a href="progress1.html">P.I</a>
         </div>
     </header>
 
@@ -48,7 +48,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w1_disorder.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress1/w1_disorder.jpg" alt="My head disorder">
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w1_video.jpg" alt="Me">
+                    <img src="img/artdev/progress1/w1_video.jpg" alt="Me">
                 </div>
             </div>
 
