--- a/w5.html
+++ b/w5.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PI_w5</title>
     <!-- script file -->
-    <script src="/js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <!-- style file -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- google fonts api -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,9 @@
     <!-- google icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- favicon  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
 </head>
 
 <body>
@@ -32,8 +32,8 @@
             </span>
         </div>
         <div class="navbar__links">
-            <a href="/index.html">Home</a>
-            <a href="/progress1.html">P.I</a>
+            <a href="index.html">Home</a>
+            <a href="progress1.html">P.I</a>
         </div>
     </header>
 
@@ -48,7 +48,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w5_summary.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress1/w5_summary.jpg" alt="My head disorder">
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w5_soundImg.jpg" alt="Me">
+                    <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
                 </div>
             </div>
 
@@ -115,7 +115,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w5_project.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress1/w5_project.jpg" alt="My head disorder">
                 </div>
             </div>
 
@@ -137,7 +137,7 @@
                     the north of Quito,
                     Ecuador with my family.
                 </p>
-                <a href="/html/p1/project1.html" class="btn">Watch The Project</a>
+                <a href=project1.html" class="btn">Watch The Project</a>
             </div>
         </div>
     </section>
