--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </p>
         </div>
         <div class="content">
-            <a class="card" href="progress1.html" target="_blank">
+            <a class="card" href="html/progress/progress1.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -147,7 +147,7 @@
                 </div>
             </a>
 
-            <a class="card" href="progress2.html" target="_blank">
+            <a class="card" href="html/progress/progress2.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -163,7 +163,7 @@
                 </div>
             </a>
 
-            <a class="card" href="progress3.html" target="_blank">
+            <a class="card" href="html/progress/progress3.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -214,7 +214,7 @@
                     </div>
                     <div class="info">
                         <h3>E-Mail</h3>
-                        <a href="mailto: abc@example.com">
+                        <a href="mailto: washington.yandun@udla.edu.ec">
                             W. Yandun
                         </a>
                     </div>
