--- a/html/progress/progress1.html
+++ b/html/progress/progress1.html
@@ -33,8 +33,8 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress2.html">P.II</a>
-            <a href="progress3.html">P.III</a>
+            <a href="html/progress/progress1.html">P.II</a>
+            <a href="html/progress/progress3.html">P.III</a>
         </div>
     </header>
 
@@ -42,30 +42,32 @@
     <!-- galery -->
     <div class="galery-row">
         <div class="column">
-            <a href="w1.html" class="pics"><img src="img/artdev/progress1/w1_disorder.jpg" alt=""></a>
-            <a href="w1.html" class="pics"><img src="img/artdev/progress1/w1_video.jpg" alt=""></a>
+            <a href="html/weeks/w1.html" class="pics"><img src="img/artdev/progress1/w1_disorder.jpg" alt=""></a>
+            <a href="html/weeks/w1.html" class="pics"><img src="img/artdev/progress1/w1_video.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="w2.html" class="pics"><img src="img/artdev/progress1/w2_udla.jpeg" alt=""></a>
-            <a href="w2.html" class="pics"><img src="img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
+            <a href="html/weeks/w2.html" class="pics"><img src="img/artdev/progress1/w2_udla.jpeg" alt=""></a>
+            <a href="html/weeks/w2.html" class="pics"><img src="img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="w3.html" class="pics"><img src="img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
-            <a href="w3.html" class="pics"><img src="img/artdev/progress1/w3_question.jpg" alt=""></a>
+            <a href="html/weeks/w3.html" class="pics"><img src="img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
+            <a href="html/weeks/w3.html" class="pics"><img src="img/artdev/progress1/w3_question.jpg" alt=""></a>
         </div>
 
         <div class="column">
-            <a href="w4.html" class="pics"><img src="img/artdev/progress1/w4_video.jpg" alt=""></a>
-            <a href="w4.html" class="pics"><img src="img/artdev/progress1/w4_questions.jpg" alt=""></a>
-            <a href="w4.html" class="pics"><img src="img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
+            <a href="html/weeks/w4.html" class="pics"><img src="img/artdev/progress1/w4_video.jpg" alt=""></a>
+            <a href="html/weeks/w4.html" class="pics"><img src="img/artdev/progress1/w4_questions.jpg" alt=""></a>
+            <a href="html/weeks/w4.html" class="pics"><img src="img/artdev/progress1/w4_oralPresentation.jpg"
+                    alt=""></a>
         </div>
 
         <div class="column">
-            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_summary.jpg" alt="summary"></a>
-            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_soundImg.jpg" alt="soundImg"></a>
-            <a href="w5.html" class="pics"><img src="img/artdev/progress1/w5_project.jpg" alt="project"></a>
+            <a href="html/weeks/w5.html" class="pics"><img src="img/artdev/progress1/w5_summary.jpg" alt="summary"></a>
+            <a href="html/weeks/w5.html" class="pics"><img src="img/artdev/progress1/w5_soundImg.jpg"
+                    alt="soundImg"></a>
+            <a href="html/weeks/w5.html" class="pics"><img src="img/artdev/progress1/w5_project.jpg" alt="project"></a>
         </div>
     </div>
 
