change the order of the folders

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
             </a>
 
-            <a class="card" href="html/progress/progress2.html" target="_blank">
+            <a class="card" href="progress2.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -163,7 +163,7 @@
                 </div>
             </a>
 
-            <a class="card" href="html/progress/progress3.html" target="_blank">
+            <a class="card" href="progress3.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
