--- a/project1.html
+++ b/project1.html
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="html/progress/progress1.html">P.I</a>
+            <a href="progress1.html">P.I</a>
         </div>
     </header>
 
