add some description

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
                     merge art and
                     programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    My spectations about this subject it is to improve my skills at art analysis.
                     <br><br>
                     I live in
                     the north of Quito,
