--- a/w1.html
+++ b/w1.html
@@ -90,16 +90,17 @@
                 </h2>
                 <p>
                     <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione illum, dolorum officia omnis
-                    repellendus rerum, alias facere id neque corporis ullam debitis quos animi nobis, aliquam dolores
-                    deserunt autem nemo nulla porro enim odio fuga! Sed quis, voluptas optio repellendus quisquam ea
-                    temporibus recusandae vel nesciunt, natus deserunt corporis, aut illum quibusdam laborum sapiente
-                    ducimus accusantium. Odit, libero omnis! Quisquam repellendus fugiat officia adipisci omnis harum
-                    mollitia tenetur? Eius, accusamus?
+                    The videos from this week show us the importance of art in life.
+                    In addition, it gives us the concept of "creative processes", key to understanding art and starting
+                    thinking
+                    like an artist.
                     <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat esse, mollitia saepe nesciunt,
-                    accusamus repudiandae atque fugiat sint sit magni vitae voluptate quo debitis cupiditate? Quia
-                    placeat numquam suscipit harum.
+                    It also shows how personal identity is strongly linked to art, it serves for the
+                    self-knowledge.
+                    On the other hand, he shows us an example of that trip of some teachers, which is significant for my
+                    own trip.
+                    <br><br>
+                    I did not get on well with art at first but with this subject i think that will change.
                 </p>
             </div>
         </div>
