add a text at p in w4 file

--- a/w4.html
+++ b/w4.html
@@ -57,13 +57,12 @@
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    This week's videos show us the way humans found art.
+                    And also these videos, show how the brain work for understanding what to select to be art.
+                    Is very interesting i never thought about it.
+                    The videos tells about how people interpret the beauty of things and how we relationate that with
+                    art.
+                    Also, it show us 3 ways of dedign for "making people happy"
                 </p>
             </div>
         </div>
@@ -86,13 +85,21 @@
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    This week's videos show us the importance of art. Is it necessary for something to be beautiful to
+                    be considered art?
+                    Why or why not?
+                    <br><br>
+                    I don't think something has to be beautiful to be considered art. And in fact, how are we going to
+                    define beauty, do
+                    they go hand in hand? Putting these two concepts in a single question brings up more questions
+                    without many answers. In
+                    my case and my definition of beauty and art. Something, it does not need to be considered beautiful
+                    to be art, I
+                    consider art a mathematical expression. It is beautiful, it may be how I could not. Dali works are
+                    considered art, are
+                    they beautiful? some, yes. I think that art goes in another direction of perception a little
+                    different from beauty,
+                    although sometimes, they can go hand in hand.
                 </p>
             </div>
         </div>
