add the project on its respective file

--- a/project1.html
+++ b/project1.html
@@ -38,16 +38,22 @@
     </header>
 
 
-    <!-- act1 -->
+    <!-- act 3 -->
     <section class="bio" id="bio">
         <div class="bio__title">
-            <h2 class="title">Project 1 -We are doing it xd-</h2>
-        </div>
+            <h2 class="title">
+                Nature & Us - Project: Progress 1
+            </h2>
 
+        </div>
         <div class="bio__content">
 
-            <div class="col left-col">
+            <div class="col left-col" id="project">
                 <div class="bio__card">
+                    <iframe src="https://www.youtube.com/embed/kQhb9eYH2g0" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
                 </div>
             </div>
         </div>
