--- a/w6.html
+++ b/w6.html
@@ -121,7 +121,7 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Summary
                 </h2>
                 <p>
                     <br><br>
