adding images for the next week (6)

--- a/w6.html
+++ b/w6.html
@@ -54,21 +54,13 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Summary
+                    Groups Expo. Summary
                 </h2>
                 <p>
                     <br><br>
-                    The videos tell us about various art situations both internationally and internally here in Ecuador,
-                    they give us a
-                    vision of what can be done with art and how it can break different barriers such as borders,
-                    stereotypes, prejudices and
-                    even physical limitations.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nam vero cum! Dolor, illo qui nesciunt sunt doloribus saepe id!
                     <br><br>
-                    It was interesting to see how people can achieve so many things
-                    through art and the way
-                    they express themselves through it. The videos, in addition to the above mentioned, try to show us
-                    how much can be done
-                    in art, in so many different forms of it.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempore, earum natus ipsum temporibus assumenda ducimus eveniet harum modi saepe?
                     <br><br>
                 </p>
             </div>
@@ -88,7 +80,7 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Summary Progress 1
                 </h2>
                 <p>
                     <br><br>
@@ -121,7 +113,7 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Summary
+                    Weekly videos Summary
                 </h2>
                 <p>
                     <br><br>
