complete weekly videos summary

--- a/project1.html
+++ b/project1.html
@@ -42,7 +42,7 @@
     <section class="bio" id="bio">
         <div class="bio__title">
             <h2 class="title">
-                Project: Progress 1
+                Project 1
             </h2>
 
         </div>
