--- a/w5.html
+++ b/w5.html
@@ -58,17 +58,7 @@
                 </h2>
                 <p>
                     <br><br>
-                    The videos tell us about various art situations both internationally and internally here in Ecuador,
-                    they give us a
-                    vision of what can be done with art and how it can break different barriers such as borders,
-                    stereotypes, prejudices and
-                    even physical limitations.
-                    <br><br>
-                    It was interesting to see how people can achieve so many things
-                    through art and the way
-                    they express themselves through it. The videos, in addition to the above mentioned, try to show us
-                    how much can be done
-                    in art, in so many different forms of it.
+                    the video of the week shows us the artistic appreciation of alejandro regarding paintings from the forest, as one of a dutch painter from the real, there are also quite a few bible paintings, where those paintings tell us some parts of the bible. It is also interesting how the other interlocutor tells us about some data about physics and the creation of the universe, since he is physical, so it is quite enriching to be able to listen to both points of view and opinions.
                     <br><br>
                 </p>
             </div>
@@ -88,21 +78,13 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Hey There! I'm Washington
+                    Creative Project Reflection
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    At the moment we have already sealed the subject I quite like how the main sound we have prepared is going, although at the time of finishing the project we will have to edit it more and we will also have to add more sounds in conjunction with the photos that we have selected as a group.
+                    But, I think it is important to start using Adobe Rush in order to see what the final edition of the project would be like. We should also choose the sounds necessary for it.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
                 </p>
             </div>
         </div>
