fix dali responisve

--- a/w4.html
+++ b/w4.html
@@ -39,7 +39,7 @@
 
 
     <!-- act1 -->
-    <section class="bio" id="bio">
+    <section class="bio" >
         <div class="bio__title">
             <h2 class="title">Week 4</h2>
         </div>
@@ -70,7 +70,7 @@
 
 
     <!-- act 2 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__content">
 
             <div class="col left-col">
@@ -107,14 +107,14 @@
 
 
     <!-- act 3 -->
-    <section class="bio" id="bio">
-        <div class="bio__title">
-            <h2 class="title">
+    <section class="bio">
+        <div class="bio__title dali">
+            <h2 class="title daliT">
                 "La persistencia de la memoria"
                 -Salvador Dali-
             </h2>
-
         </div>
+
         <div class="bio__content">
 
             <div class="col left-col">
