--- a/w5.html
+++ b/w5.html
@@ -39,7 +39,7 @@
 
 
     <!-- act1 -->
-    <section class="bio" id="bio">
+    <section class="bio weeks">
         <div class="bio__title">
             <h2 class="title">Week 5</h2>
         </div>
@@ -67,7 +67,7 @@
 
 
     <!-- act 2 -->
-    <section class="bio" id="bio">
+    <section class="bio weeks">
         <div class="bio__content">
 
             <div class="col left-col">
@@ -91,8 +91,30 @@
     </section>
 
 
-    <!-- act 3 -->
-    <section class="bio" id="bio">
+        <!-- act 3 -->
+        <section class="bio weeks">
+            <div class="bio__content">
+    
+                <div class="col left-col">
+                    <div class="bio__card">
+                        <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
+                    </div>
+                </div>
+    
+                <div class="col right-col">
+                    <h2 class="content-title">
+                        Opinion
+                    </h2>
+                    <p>
+                        Well, I think those videos were quite inspiring for me since I'm not used to seeing art that way so I think it's nice to be able to see the art of others and the opinion of others about a topic of interest to me, so taking I think the opinion of the interlocutors of the videos gave me a new direction to improve the selection of sounds and images to edit
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+    <!-- act 4 -->
+    <section class="bio weeks">
         <div class="bio__content">
 
             <div class="col left-col">
@@ -102,22 +124,17 @@
             </div>
 
             <div class="col right-col">
+                <div class="bio__title">
+                    <h2 class="title">
+                        "La persistencia de la memoria"
+                        -Salvador Dali-
+                    </h2>
+                </div>
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Project 1
                 </h2>
                 <p>
-                    <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
-                    <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
+                    finally we can present project 1 of the first part of the course, this excites me a lot since I have dedicated a lot of time to this.
                 </p>
                 <a href="project1.html" class="btn">Watch The Project</a>
             </div>
