--- a/project1.html
+++ b/project1.html
@@ -39,7 +39,7 @@
 
 
     <!-- act 3 -->
-    <section class="bio" id="bio">
+    <section class="bio weeks weekP">
         <div class="bio__title">
             <h2 class="title">
                 Project 1
