--- a/w5.html
+++ b/w5.html
@@ -69,10 +69,9 @@
     <!-- act 2 -->
     <section class="bio weeks">
         <div class="bio__content">
-
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
+                    <img src="img/artdev/progress1/w5_noise.jpeg" alt="noise">
                 </div>
             </div>
 
@@ -114,22 +113,14 @@
 
 
     <!-- act 4 -->
-    <section class="bio weeks">
+    <section class="bio weeks weekP">
         <div class="bio__content">
-
             <div class="col left-col">
                 <div class="bio__card">
                     <img src="img/artdev/progress1/w5_project.jpg" alt="My head disorder">
                 </div>
             </div>
-
             <div class="col right-col">
-                <div class="bio__title">
-                    <h2 class="title">
-                        "La persistencia de la memoria"
-                        -Salvador Dali-
-                    </h2>
-                </div>
                 <h2 class="content-title">
                     Project 1
                 </h2>
