--- a/progress1.html
+++ b/progress1.html
@@ -144,21 +144,21 @@
 
         <div class="column">
             <a href="w6.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_summary.jpg" alt="videoSummary">
+                <img class="image__img" src="img/artdev/progress1/w6_expoSummary.jpeg" alt="kahlo">
                 <div class="image__overlay">
                     <div class="image__title">6</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w6.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_soundImg.jpg" alt="sound">
+                <img class="image__img" src="img/artdev/progress1/w6_progressSummary.jpeg" alt="japan">
                 <div class="image__overlay">
                     <div class="image__title">6</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w6.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_project.jpg" alt="project">
+                <img class="image__img" src="img/artdev/progress1/w6_videosSummary.jpeg" alt="art">
                 <div class="image__overlay">
                     <div class="image__title">6</div>
                     <p class="image__text">Wk</p>
