--- a/w6.html
+++ b/w6.html
@@ -48,13 +48,13 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_summary.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress1/w6_expoSummary.jpeg" alt="kahlo">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Groups Expo. Summary
+                    Expo Summary
                 </h2>
                 <p>
                     <br><br>
@@ -74,13 +74,13 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
+                    <img src="img/artdev/progress1/w6_progressSummary.jpeg" alt="japan">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Summary Progress 1
+                    Progress Summary
                 </h2>
                 <p>
                     <br><br>
@@ -102,12 +102,12 @@
 
 
     <!-- act 3 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_project.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress1/w6_videosSummary.jpeg" alt="summary">
                 </div>
             </div>
 
@@ -129,7 +129,6 @@
                     the north of Quito,
                     Ecuador with my family.
                 </p>
-                <a href="project1.html" class="btn">Watch The Project</a>
             </div>
         </div>
     </section>
