firx responsive bug

--- a/w5.html
+++ b/w5.html
@@ -113,16 +113,22 @@
 
 
     <!-- act 4 -->
-    <section class="bio weeks weekP">
+       <section class="bio">
+        <div class="bio__title dali">
+            <h2 class="title daliT">
+                Project 1
+            </h2>
+        </div>
         <div class="bio__content">
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_project.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress1/w5_project.jpg" alt="project">
                 </div>
             </div>
+
             <div class="col right-col">
                 <h2 class="content-title">
-                    Project 1
+                    Project
                 </h2>
                 <p>
                     finally we can present project 1 of the first part of the course, this excites me a lot since I have dedicated a lot of time to this.
