fix responsive bug

--- a/project1.html
+++ b/project1.html
@@ -39,7 +39,7 @@
 
 
     <!-- act 3 -->
-    <section class="bio weeks weekP">
+    <section class="bio">
         <div class="bio__title">
             <h2 class="title">
                 Project 1
@@ -47,7 +47,6 @@
 
         </div>
         <div class="bio__content">
-
             <div class="col left-col" id="project">
                 <div class="bio__card">
                     <iframe src="https://www.youtube.com/embed/kQhb9eYH2g0" title="YouTube video player" frameborder="0"
