fix responsive bug

--- a/w5.html
+++ b/w5.html
@@ -114,8 +114,8 @@
 
     <!-- act 4 -->
        <section class="bio">
-        <div class="bio__title dali">
-            <h2 class="title daliT">
+        <div class="bio__title">
+            <h2 class="title">
                 Project 1
             </h2>
         </div>
